--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
+language: cpp
 matrix:
     include:
       - os: osx
         osx_image: xcode10.1
-      
       - os: osx
         osx_image: xcode9.4
