--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         version: 5.12.5
         target: desktop
-        host: mac
+        host: ${{ matrix.env.qtplatform }}
         install-deps: true
         modules: qtwebengine
     - name: Configure Release
