--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -7,16 +7,18 @@ jobs:
       fail-fast: false
       matrix:
         env:
-          - name: lin
+          - name: linux
             os: ubuntu-latest
             ninja_platform: linux
             qt_platform: linux
             arch: linux-x86_64
+            cmake_env: {}
           - name: mac
             os: macos-latest
             ninja_platform: mac
             qt_platform: mac
             arch: darwin64-x86_64-cc
+            cmake_env: {}
           - name: win
             os: windows-latest
             ninja_platform: win
@@ -42,7 +44,7 @@ jobs:
       if: matrix.env.name == 'win'
       uses: ilammy/setup-nasm@v1.0.0
     - name: Build OpenSSL (linux)
-      if: matrix.env.name == 'lin'
+      if: matrix.env.name == 'linux'
       run: |
         cd dep/openssl/openssl
         ./config -fPIC
