--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -69,6 +69,7 @@ jobs:
         destination: ninja
     - name: Install Qt
       uses: jurplel/install-qt-action@v2.2.0
+      timeout-minutes: 10
       with:
         version: 5.12.5
         target: desktop
@@ -92,7 +93,7 @@ jobs:
         cd build/release
         ninja
     - name: Test
-      if: false
+      continue-on-error: true
       run: |
         cd build/release
         ninja check
