--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -1,3 +1,5 @@
+Testing out document header
+---
 name: GitAhead (CI)
 on: [push]
 jobs:
@@ -96,3 +98,4 @@ jobs:
         run: |
           cd build/release
           ninja check
+...
