Add pull requests

--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -3,7 +3,9 @@ name: GitAhead
 on:
   push:
     branches:
+    branches-ignore:
       - master
+    pull_request:
 jobs:
   build:
     runs-on: ${{ matrix.env.os }}
