Add page builds

--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -2,10 +2,10 @@
 name: GitAhead
 on:
   push:
-    branches:
     branches-ignore:
-      - master
-    pull_request:
+      - stage
+  pull_request:
+  page_build:
 jobs:
   build:
     runs-on: ${{ matrix.env.os }}
