--- a/.github/workflows/build-gitahead-mac.yml
+++ b/.github/workflows/build-gitahead-mac.yml
@@ -83,7 +83,7 @@ jobs:
           target: desktop
           host: ${{ matrix.env.qtplatform }}
           install-deps: true
-          modules: qtwebengine
+          modules: qtwebengine qtnetworkauth qtwebglplugin qtscript debug_info
       - name: Configure Release
         env: ${{ matrix.env.cmake_env }}
         run: |
