--- a/.github/workflows/debug-script.yml
+++ b/.github/workflows/debug-script.yml
@@ -47,7 +47,8 @@
               host: ${{ matrix.env.qtplatform }}
               install-deps: true
               modules: qtwebengine qtnetworkauth qtwebglplugin qtscript debug_info
-          - run: |
-            pwd
-            ls -la
+          - name: Print
+            run: |
+              pwd
+              ls -la
 ...
