--- a/.github/workflows/debug-script.yml
+++ b/.github/workflows/debug-script.yml
@@ -20,6 +20,9 @@ jobs:
           host: ${{ matrix.env.qtplatform }}
           install-deps: true
           modules: qtwebengine qtnetworkauth qtwebglplugin qtscript debug_info
+      - name: Variables
+        run: |
+        echo CMAKE_PREFIX_PATH: $CMAKE_PREFIX_PATH
       - name: Print
         run: |
           pwd
